# the-fede

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/actions/: __init__.py  extractor.py
src/bot/: core.py  handlers.py
src/claude/: client.py  personality.py  prompts.py  session.py
src/utils/: config.py
